WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169907
Dynamically applied :empty pseudo class with display:none does not get unapplied
https://bugs.webkit.org/show_bug.cgi?id=169907
Summary
Dynamically applied :empty pseudo class with display:none does not get unapplied
Ryosuke Niwa
Reported
2017-03-20 21:04:48 PDT
When tbody:empty contains display:none, and this rule is applied as a result of dynamic DOM mutation, the rule hides tbody successfully but inserting new content does not unapply the rule, resulting in the tbody to be forever hidden until the style recalc is forced on the element.
Attachments
Demo
(438 bytes, text/html)
2017-03-20 21:06 PDT
,
Ryosuke Niwa
no flags
Details
Demo with div
(333 bytes, text/html)
2017-03-22 14:20 PDT
,
Ryosuke Niwa
no flags
Details
patch
(6.69 KB, patch)
2017-03-22 16:57 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2017-03-20 21:06:02 PDT
Created
attachment 304987
[details]
Demo You should see "PASS" in the attached content when this bug is fixed.
Ryosuke Niwa
Comment 2
2017-03-22 14:20:10 PDT
Created
attachment 305126
[details]
Demo with div In fact, this is not specific to tr. It also happens with any element :(
Antti Koivisto
Comment 3
2017-03-22 16:57:27 PDT
Created
attachment 305137
[details]
patch
WebKit Commit Bot
Comment 4
2017-03-22 18:16:11 PDT
Comment on
attachment 305137
[details]
patch Clearing flags on attachment: 305137 Committed
r214290
: <
http://trac.webkit.org/changeset/214290
>
WebKit Commit Bot
Comment 5
2017-03-22 18:16:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-03-23 09:37:34 PDT
<
rdar://problem/31221156
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug