Dynamically applied :empty pseudo class with display:none does not get unapplied https://bugs.webkit.org/show_bug.cgi?id=169907

Reviewed by Ryosuke Niwa.

Source/WebCore:

We improperly reset the styleAffectedByEmpty bit when removing the renderer when :empty starts
applying. We then fail to invalidate the style when the element becomes non-empty again.

Fix by resetting the style relation bits only when computing the style.

Test: fast/css/empty-display-none-invalidation.html

* dom/Element.cpp:
(WebCore::Element::resetStyleRelations):

    Expose this separately.

(WebCore::Element::clearStyleDerivedDataBeforeDetachingRenderer):

    Don't reset style relation bits when removing renderers.

* dom/Element.h:
* dom/ElementRareData.h:
(WebCore::ElementRareData::resetComputedStyle):
(WebCore::ElementRareData::resetStyleRelations):

    Reset all these bits in one function.

(WebCore::ElementRareData::resetDynamicRestyleObservations): Deleted.
* style/StyleTreeResolver.cpp:
(WebCore::Style::resetStyleForNonRenderedDescendants):
(WebCore::Style::TreeResolver::resolveComposedTree):

    Call the explicit style relation reset function when recomputing style.

LayoutTests:

* fast/css/empty-display-none-invalidation-expected.html: Added.
* fast/css/empty-display-none-invalidation.html: Added.


Canonical link: https://commits.webkit.org/186917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214290 268f45cc-cd09-0410-ab3c-d52691b4dbfc