Source/WebCore/style/StyleTreeResolver.cpp
@@ -140,6 +140,7 @@ static void resetStyleForNonRenderedDescendants(Element& current)
 
         if (child.needsStyleRecalc() || affectedByPreviousSibling) {
             child.resetComputedStyle();
+            child.resetStyleRelations();
             child.setHasValidStyle();
         }
 
@@ -413,6 +414,7 @@ void TreeResolver::resolveComposedTree()
         bool shouldResolve = shouldResolveElement(element, parent.change) || affectedByPreviousSibling;
         if (shouldResolve) {
             element.resetComputedStyle();
+            element.resetStyleRelations();
 
             if (element.hasCustomStyleResolveCallbacks())
                 element.willRecalcStyle(parent.change);
